completed slider view

--- a/front-end/src/components/movie-slider/Button/ButtonHandle.css
+++ b/front-end/src/components/movie-slider/Button/ButtonHandle.css
@@ -3,7 +3,7 @@
     border-radius: 1rem;
     flex-grow: 0;
     flex-shrink: 0;
-    background-color: rgba(255, 255, 255, .25);
+    background-color: transparent;
     z-index: 10;
     margin: var(--img-gap) 0;
     width: var(--handle-size);
@@ -29,7 +29,7 @@
 
 .handle:hover,
 .handle:focus {
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(255, 248, 248, 0.38);
 }
 
 .text {
