--- a/front-end/src/pages/Home/Home.css
+++ b/front-end/src/pages/Home/Home.css
@@ -7,13 +7,8 @@
     width: 100%;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-}
 
-p {
+p, h3 {
     color: #F4EEE0;
     font-weight: bold;
 }
