--- a/front-end/src/components/header/Header.css
+++ b/front-end/src/components/header/Header.css
@@ -2,7 +2,7 @@
     background-color: #6D5D6E;
     width: 100%;
     height: 70px;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 10;
